<?xml version="1.0"?>
<package format="2">
  <name>rqt_openstf_teleop</name>
  <version>0.0.1</version>
  <description>The rqt_openstf_teleop package</description>

  <maintainer email="sgulyaevsky@gmail.com">Sergey Gulyaevsky</maintainer>
  <license>MIT</license>


  <url type="website">https://github.com/sgulyaevsky/rqt_openstf_teleop</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
